fixed focus on safari

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ p {
 }
 
 .tile:focus,
-.tile:active {
+.tile:focus-visible {
   outline: 3px solid #feea00;
 }
 
